<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderList.EqorderDetailActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="318dp"
        android:layout_height="249dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvRono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvRono"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvRono_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLesNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDsno"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvDsno_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMemname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMemname"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvMemname_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTepc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTepc"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvTepc_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTpriz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTpriz"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvTpriz_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvOpstate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOpstate"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvOpstate_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvRsdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvRsdate"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvRsdate_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvRddate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvRddate"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvRddate_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvOstate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOstate"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvOstate_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvOnote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOnote"
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvOnote_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text=""
                android:textColor="@color/colorTitle"
                android:textSize="18dp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvEquipDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvEquipDetail"
        android:textColor="@color/colorTitle"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEquipList"
        android:layout_width="344dp"
        android:layout_height="220dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEquipDetail" />

    <Button
        android:id="@+id/btnToQrcode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_button_radius_blue"
        android:text="@string/btnToQrcode"
        android:textColor="#ffffff"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvEquipList" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_radius"
        android:text="@string/rorderdetail"
        android:textSize="30dp"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>