<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Member.ImageUploadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUpload"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_radius"
            android:text="@string/text_Upload"
            android:textColor="#ffffff"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/ivTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:onClick="onTakePictureClick"
            android:src="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/btUpload"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:onClick="onUploadClick"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:background="@drawable/background_button_radius_blue"
            android:text="@string/text_btUpload" />

        <TextView
            android:id="@+id/tvResponse"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_radius"
            android:text="@string/text_Response"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/ivResponseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:src="@android:drawable/ic_menu_camera" />
    </LinearLayout>

</ScrollView>